--- a/Slow_flows.ipynb
+++ b/Slow_flows.ipynb
@@ -408,13 +408,13 @@
     "from scipy.io import wavfile\n",
     "import copy\n",
     "\n",
-    "data_1 = copy.deepcopy(wavfile.read('/data/tsi/analyse_de_donnees/04-Data/Audio samples/sample_1.wav')[1][:, :1]).astype(float)\n",
+    "data_1 = copy.deepcopy(wavfile.read('/data/sample_1.wav')[1][:, :1]).astype(float)\n",
     "data_1 = (data_1 - data_1.min()) / (data_1.max() - data_1.min())\n",
-    "data_2 = copy.deepcopy(wavfile.read('/data/tsi/analyse_de_donnees/04-Data/Audio samples/sample_2.wav')[1][:, :1]).astype(float)\n",
+    "data_2 = copy.deepcopy(wavfile.read('/data/sample_2.wav')[1][:, :1]).astype(float)\n",
     "data_2 = (data_2 - data_2.min()) / (data_2.max() - data_2.min())\n",
-    "data_3 = copy.deepcopy(wavfile.read('/data/tsi/analyse_de_donnees/04-Data/Audio samples/sample_3.wav')[1][:, :1]).astype(float)\n",
+    "data_3 = copy.deepcopy(wavfile.read('/data/sample_3.wav')[1][:, :1]).astype(float)\n",
     "data_3 = (data_3 - data_3.min()) / (data_3.max() - data_3.min())\n",
-    "data_4 = copy.deepcopy(wavfile.read('/data/tsi/analyse_de_donnees/04-Data/Audio samples/sample_4.wav')[1][:, :1]).astype(float)\n",
+    "data_4 = copy.deepcopy(wavfile.read('/data/sample_4.wav')[1][:, :1]).astype(float)\n",
     "data_4 = (data_4 - data_4.min()) / (data_4.max() - data_4.min())"
    ]
   },
